// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedbackLink should render a negative FeedbackLink 1`] = `
<ToolbarButton
  name="frown-o"
  onClick={[Function]}
  text="negativeRating"
/>
`;

exports[`FeedbackLink should render a positive FeedbackLink 1`] = `
<ToolbarButton
  name="smile-o"
  onClick={[Function]}
  text="positiveRating"
/>
`;
